@@ -7,7 +7,8 @@
 </maintainer>
 <herd>sci-mathematics</herd>
 <use>
-  <flag name="extras"> Install Macaulay2 and Singular packages as shipped by upstream</flag>
+	<flag name="extras"> Install <pkg>sci-mathematics/Macaulay2</pkg> and <pkg>sci-mathematics/singular</pkg> 
+	packages as shipped by upstream</flag>
 </use>
 <longdescription lang="en">
 Normaliz is a (command line) tool for computations in affine monoids, vector configurations, lattice polytopes, and
